--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -44,7 +44,11 @@
 
 <header>
   <div class="header-container">
-    <div class="logo">ORE</div>
+<div class="logo">
+  <img src="logo.png" alt="Logo" class="logo" />
+
+
+  <div class="logo">ORE</div>
     <div class="header-text">
       <h1>Ogólnopolski Rejestr Elektryków</h1>
       <p>Oficjalna wyszukiwarka certyfikowanych elektryków w Polsce</p>
