--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -17,114 +17,34 @@
     }
 
     * { box-sizing: border-box; }
-
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-    }
-
-    header {
-      background: linear-gradient(135deg, #0B5FA5, #083f6b);
-      color: white;
-      padding: 40px 20px;
-    }
-
-    .header-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .logo {
-      width: 64px;
-      height: 64px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .logo img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-
+    body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
+    header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
+    .header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
+    .logo { width:64px; height:64px; border-radius:50%; background:white; display:flex; align-items:center; justify-content:center; font-weight:bold; color:var(--primary); font-size:22px; }
     .header-text h1 { margin:0; font-size:28px; }
     .header-text p { margin:6px 0 0; opacity:0.9; }
 
     main { max-width:1200px; margin:-40px auto 40px; padding:0 20px; }
-
-    .search-card {
-      background: var(--card);
-      border-radius:12px;
-      padding:24px;
-      box-shadow:0 10px 30px rgba(0,0,0,0.08);
-      margin-bottom:30px;
-    }
-
-    .search-grid {
-      display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(220px,1fr));
-      gap:20px;
-    }
-
+    .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
+    .search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
     label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
-    select, button {
-      width:100%;
-      padding:12px;
-      font-size:15px;
-      border-radius:8px;
-      border:1px solid #d1d5db;
-    }
-
-    button {
-      background-color: var(--primary);
-      color:white;
-      border:none;
-      cursor:pointer;
-      font-weight:bold;
-    }
-
+    select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
+    button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
     button:hover { opacity:0.9; }
-
-    .results-card {
-      background: var(--card);
-      border-radius:12px;
-      padding:20px;
-      box-shadow:0 6px 20px rgba(0,0,0,0.06);
-    }
-
-    table {
-      width:100%;
-      border-collapse:collapse;
-    }
-
-    th, td {
-      padding:14px 10px;
-      text-align:left;
-      border-bottom:1px solid #e5e7eb;
-    }
-
+    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
+    table { width:100%; border-collapse:collapse; }
+    th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
     th { font-size:14px; color:var(--muted); }
     .stars { color:#f5b301; font-size:16px; }
     .empty { text-align:center; padding:30px; color:var(--muted); }
-
-    @media(max-width:600px) {
-      .header-container { flex-direction:column; align-items:flex-start; }
-    }
+    @media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
   </style>
 </head>
 <body>
 
 <header>
   <div class="header-container">
-    <div class="logo">
-      <img src="logo.png" alt="Logo OREP">
-    </div>
+    <div class="logo">ORE</div>
     <div class="header-text">
       <h1>Ogólnopolski Rejestr Elektryków</h1>
       <p>Oficjalna wyszukiwarka certyfikowanych elektryków w Polsce</p>
@@ -143,7 +63,7 @@
       </div>
       <div>
         <label>Miasto</label>
-        <select id="miasto">
+        <select id="miasto" disabled>
           <option value="">-- wybierz --</option>
         </select>
       </div>
@@ -170,94 +90,101 @@
   </div>
 </main>
 
-<script>
-  const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
-  const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+<script type="module">
+import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-  const wojSelect = document.getElementById('wojewodztwo');
-  const miastoSelect = document.getElementById('miasto');
+const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co"
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
+const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
-  async function initFilters() {
-    const { data: woj, error } = await supabase.from('wojewodztwa').select('id, nazwa').order('nazwa');
-    if (error) { console.error(error); return; }
-    woj.forEach(w => {
-      const opt = document.createElement('option');
-      opt.value = w.nazwa; // przesyłamy nazwę, nie ID
-      opt.textContent = w.nazwa;
-      wojSelect.appendChild(opt);
-    });
+const wojSelect = document.getElementById('wojewodztwo')
+const miastoSelect = document.getElementById('miasto')
+const tbody = document.querySelector('#wyniki tbody')
+const empty = document.getElementById('empty')
+
+// Wczytaj województwa
+async function loadWojewodztwa() {
+  const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
+  if (error) { console.error(error); return }
+  data.forEach(w => {
+    const option = document.createElement('option')
+    option.value = w.id
+    option.textContent = w.nazwa
+    wojSelect.appendChild(option)
+  })
+}
+
+wojSelect.addEventListener('change', async () => {
+  const wojId = wojSelect.value
+  miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
+  miastoSelect.disabled = true
+  if (!wojId) return
+
+  const { data, error } = await supabase.from('miasta')
+    .select('id,nazwa')
+    .eq('wojewodztwo_id', wojId)
+    .order('nazwa')
+  if (error) { console.error(error); return }
+
+  data.forEach(m => {
+    const option = document.createElement('option')
+    option.value = m.nazwa  // używamy nazwy, bo tabela_elektrykow ma kolumnę 'miasto'
+    option.textContent = m.nazwa
+    miastoSelect.appendChild(option)
+  })
+  miastoSelect.disabled = false
+})
+
+async function szukaj() {
+  const wojId = wojSelect.value
+  const miasto = miastoSelect.value
+  tbody.innerHTML = ''
+
+  if (!wojId || !miasto) {
+    empty.textContent = 'Proszę wybrać województwo i miasto'
+    empty.style.display = 'block'
+    return
   }
 
-  wojSelect.addEventListener('change', async () => {
-    const woj = wojSelect.value;
-    miastoSelect.innerHTML = '<option value="">-- wybierz --</option>';
-    if (!woj) { miastoSelect.disabled = true; return; }
-    const { data: miasta, error } = await supabase
-      .from('miasta')
-      .select('nazwa')
-      .eq('wojewodztwo', woj) // zakładamy, że w tabeli miasta też jest kolumna "wojewodztwo" nazwa
-      .order('nazwa');
-    if (error) { console.error(error); return; }
-    miasta.forEach(m => {
-      const opt = document.createElement('option');
-      opt.value = m.nazwa;
-      opt.textContent = m.nazwa;
-      miastoSelect.appendChild(opt);
-    });
-    miastoSelect.disabled = false;
-  });
+  const { data: wojData } = await supabase.from('wojewodztwa')
+    .select('nazwa').eq('id', wojId).single()
+  const wojewodztwo = wojData?.nazwa
+  if (!wojewodztwo) return
 
-  async function szukaj() {
-    const tbody = document.querySelector('#wyniki tbody');
-    const empty = document.getElementById('empty');
-    tbody.innerHTML = '';
+  const { data, error } = await supabase.from('tabela_elektrykow')
+    .select('imie,nazwisko,email,telefon,gwiazdki')
+    .ilike('wojewodztwo', wojewodztwo)
+    .ilike('miasto', miasto)
 
-    const woj = wojSelect.value;
-    const miasto = miastoSelect.value;
-
-    if (!woj || !miasto) {
-      empty.textContent = 'Proszę wybrać województwo i miasto';
-      empty.style.display = 'block';
-      return;
-    }
-
-    const { data, error } = await supabase
-      .from('tabela_elektrykow')
-      .select('imie,nazwisko,email,telefon,gwiazdki')
-      .eq('wojewodztwo', woj)
-      .eq('miasto', miasto);
-
-    if (error) {
-      empty.textContent = 'Błąd pobierania danych';
-      empty.style.display = 'block';
-      console.error(error);
-      return;
-    }
-
-    if (!data || data.length === 0) {
-      empty.textContent = 'Brak wyników dla wybranego województwa i miasta';
-      empty.style.display = 'block';
-      return;
-    }
-
-    data.forEach(e => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `
-        <td>${e.imie}</td>
-        <td>${e.nazwisko}</td>
-        <td>${e.email}</td>
-        <td>${e.telefon}</td>
-        <td class="stars">${'★'.repeat(e.gwiazdki || 0)}</td>
-      `;
-      tbody.appendChild(tr);
-    });
-
-    empty.style.display = 'none';
+  if (error) {
+    empty.textContent = 'Błąd pobierania danych: ' + error.message
+    empty.style.display = 'block'
+    return
   }
 
-  initFilters();
+  if (!data || data.length === 0) {
+    empty.textContent = 'Brak wyników dla wybranego województwa i miasta'
+    empty.style.display = 'block'
+    return
+  }
+
+  data.forEach(e => {
+    const tr = document.createElement('tr')
+    tr.innerHTML = `
+      <td>${e.imie}</td>
+      <td>${e.nazwisko}</td>
+      <td>${e.email}</td>
+      <td>${e.telefon}</td>
+      <td class="stars">${'★'.repeat(e.gwiazdki || 0)}</td>
+    `
+    tbody.appendChild(tr)
+  })
+
+  empty.style.display = 'none'
+}
+
+// inicjalizacja
+loadWojewodztwa()
 </script>
-
 </body>
 </html>
