--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -47,7 +47,7 @@
 
 <header>
   <div class="header-container">
-  <img src="orep.pl/logo.png" alt="Logo" class="logo" />
+  <img src="https://github.com/electrician-register/stronaglowna/blob/main/logo.png" alt="Logo" class="logo" />
     <div class="header-text">
       <h1>Ogólnopolski Rejestr Elektryków</h1>
       <p>Oficjalna wyszukiwarka certyfikowanych elektryków w Polsce</p>
