--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -20,14 +20,11 @@
     body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
     header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
     .header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
-      .logo {
-      width: 55px;
-      display: block;
-    }
+      .logo { width: 55px; display: block; }
     .header-text h1 { margin:0; font-size:28px; }
     .header-text p { margin:6px 0 0; opacity:0.9; }
 
-    main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
+    main { max-width:1200px; margin:-40px auto 40px; padding:0 20px; }
     .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
     .search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
     label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
@@ -40,14 +37,17 @@
     th { font-size:14px; color:var(--muted); }
     .stars { color:#f5b301; font-size:16px; }
     .empty { text-align:center; padding:30px; color:var(--muted); }
-    @media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
+    @media(max-width:600px) { 
+      .header-container { flex-direction:column; align-items:flex-start; } 
+      .search-grid { grid-template-columns: 1fr; gap: 15px; }
+    }
   </style>
 </head>
 <body>
 
 <header>
   <div class="header-container">
-  <img src="/logo.png" alt="Logo" class="logo" />
+    <img src="/logo.png" alt="Logo" class="logo" />
     <div class="header-text">
       <h1>Ogólnopolski Rejestr Elektryków</h1>
       <p>Oficjalna wyszukiwarka certyfikowanych elektryków w Polsce</p>
@@ -117,10 +117,9 @@ async function loadWojewodztwa() {
   })
 }
 
-// Wczytaj miasta po województwie
 wojSelect.addEventListener('change', async () => {
   const wojId = wojSelect.value
-  console.log('Wybrano województwo ID:', wojId)  // LOG
+  console.log('Wybrano województwo ID:', wojId); // LOG
   miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
   miastoSelect.disabled = true
   if (!wojId) return
@@ -133,33 +132,37 @@ wojSelect.addEventListener('change', async () => {
 
   data.forEach(m => {
     const option = document.createElement('option')
-    option.value = m.id   // tu używamy ID zamiast nazwy
+    option.value = m.nazwa.trim()  // TRIM, żeby mobile nie zgubiło wartości
     option.textContent = m.nazwa
     miastoSelect.appendChild(option)
   })
   miastoSelect.disabled = false
-  console.log('Załadowano miasta:', data)  // LOG
+  console.log('Miasta wczytane:', data); // LOG
 })
 
 async function szukaj() {
   const wojId = wojSelect.value
-  const miastoId = miastoSelect.value
+  const miasto = miastoSelect.value.trim()  // TRIM
+  console.log('Szukaj - województwo ID:', wojId, 'Miasto:', miasto); // LOG
   tbody.innerHTML = ''
 
-  console.log('Szukam dla województwa ID:', wojId, 'miasto ID:', miastoId)  // LOG
-
-  if (!wojId || !miastoId) {
+  if (!wojId || !miasto) {
     empty.textContent = 'Proszę wybrać województwo i miasto'
     empty.style.display = 'block'
     return
   }
 
+  const { data: wojData } = await supabase.from('wojewodztwa')
+    .select('nazwa').eq('id', wojId).single()
+  const wojewodztwo = wojData?.nazwa
+  if (!wojewodztwo) return
+
   const { data, error } = await supabase.from('tabela_elektrykow')
     .select('imie,nazwisko,email,telefon,gwiazdki')
-    .eq('wojewodztwo', wojId)
-    .eq('miasto', miastoId)
+    .eq('wojewodztwo', wojId) // używamy ID województwa
+    .eq('miasto', miasto)     // i nazwy miasta
 
-  console.log('Wyniki z bazy:', data)  // LOG
+  console.log('Wyniki zapytania:', data, 'Błąd:', error); // LOG
 
   if (error) {
     empty.textContent = 'Błąd pobierania danych: ' + error.message
@@ -180,8 +183,8 @@ async function szukaj() {
       <td>${e.nazwisko}</td>
       <td>${e.email}</td>
       <td>${e.telefon}</td>
-      <td>${e.gwiazdki}</td>
-    
+       <td>${e.gwiazdki}</td>
+
     `
     tbody.appendChild(tr)
   })
