--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -24,20 +24,42 @@
     .header-text h1 { margin:0; font-size:28px; }
     .header-text p { margin:6px 0 0; opacity:0.9; }
 
-    main { max-width:1200px; margin:15px auto 40px; padding:0 20px; }
+    main { max-width:1200px; margin:25px auto 40px; padding:0 20px; }
     .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
     .search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
     label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
     select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
     button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
     button:hover { opacity:0.9; }
-    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
-    table { width:100%; border-collapse:collapse; }
-    th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
+
+    .results-card {
+      background: var(--card);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
+      overflow-x: auto; /* umożliwia przewijanie tabeli na małych ekranach */
+    }
+
+    table {
+      width: 100%;
+      min-width: 600px; /* wymusza minimalną szerokość tabeli, żeby nie ściskało */
+      border-collapse: collapse;
+    }
+
+    th, td { 
+      padding:14px 10px; 
+      text-align:left; 
+      border-bottom:1px solid #e5e7eb;
+      white-space: nowrap; /* tekst nie zawija się w komórkach */
+    }
+
     th { font-size:14px; color:var(--muted); }
     .stars { color:#f5b301; font-size:16px; }
     .empty { text-align:center; padding:30px; color:var(--muted); }
-    @media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
+
+    @media(max-width:600px) { 
+      .header-container { flex-direction:column; align-items:flex-start; } 
+    }
   </style>
 </head>
 <body>
@@ -130,7 +152,7 @@ wojSelect.addEventListener('change', async () => {
 
   data.forEach(m => {
     const option = document.createElement('option')
-    option.value = m.id  // ID miasta zamiast nazwy
+    option.value = m.id
     option.textContent = m.nazwa
     miastoSelect.appendChild(option)
   })
@@ -156,7 +178,7 @@ async function szukaj() {
     .eq('wojewodztwo', wojId)
     .eq('miasto', miastoId)
 
-  console.log('Wyniki z bazy:', data, 'Błąd:', error)
+  console.log('Wyniki z bazy:', data)
 
   if (error) {
     empty.textContent = 'Błąd pobierania danych: ' + error.message
