--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -20,46 +20,24 @@
     body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
     header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
     .header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
-      .logo { width: 55px; display: block; }
+    .logo { width: 55px; display: block; }
     .header-text h1 { margin:0; font-size:28px; }
     .header-text p { margin:6px 0 0; opacity:0.9; }
 
-    main { max-width:1200px; margin:25px auto 40px; padding:0 20px; }
+    main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
     .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
     .search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
     label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
     select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
     button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
     button:hover { opacity:0.9; }
-
-    .results-card {
-      background: var(--card);
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
-      overflow-x: auto; /* umożliwia przewijanie tabeli na małych ekranach */
-    }
-
-    table {
-      width: 100%;
-      min-width: 600px; /* wymusza minimalną szerokość tabeli, żeby nie ściskało */
-      border-collapse: collapse;
-    }
-
-    th, td { 
-      padding:14px 10px; 
-      text-align:left; 
-      border-bottom:1px solid #e5e7eb;
-      white-space: nowrap; /* tekst nie zawija się w komórkach */
-    }
-
+    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
+    table { width:100%; border-collapse:collapse; }
+    th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
     th { font-size:14px; color:var(--muted); }
     .stars { color:#f5b301; font-size:16px; }
     .empty { text-align:center; padding:30px; color:var(--muted); }
-
-    @media(max-width:600px) { 
-      .header-container { flex-direction:column; align-items:flex-start; } 
-    }
+    @media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
   </style>
 </head>
 <body>
@@ -139,7 +117,7 @@ async function loadWojewodztwa() {
 // Wczytaj miasta po województwie
 wojSelect.addEventListener('change', async () => {
   const wojId = wojSelect.value
-  console.log('Wybrano województwo ID:', wojId)
+  console.log('Wybrano województwo ID:', wojId)  // LOG
   miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
   miastoSelect.disabled = true
   if (!wojId) return
@@ -152,22 +130,22 @@ wojSelect.addEventListener('change', async () => {
 
   data.forEach(m => {
     const option = document.createElement('option')
-    option.value = m.id
+    option.value = m.id   // używamy ID miasta
     option.textContent = m.nazwa
     miastoSelect.appendChild(option)
   })
   miastoSelect.disabled = false
-  console.log('Załadowano miasta:', data)
+  console.log('Załadowano miasta:', data)  // LOG
 })
 
 async function szukaj() {
-  const wojId = wojSelect.value
-  const miastoId = miastoSelect.value
+  const wojIdNum = parseInt(wojSelect.value)     // konwertujemy na liczbę
+  const miastoIdNum = parseInt(miastoSelect.value) // konwertujemy na liczbę
   tbody.innerHTML = ''
 
-  console.log('Szukam dla województwa ID:', wojId, 'miasto ID:', miastoId)
+  console.log('Szukam dla województwa ID:', wojIdNum, 'miasto ID:', miastoIdNum)  // LOG
 
-  if (!wojId || !miastoId) {
+  if (!wojIdNum || !miastoIdNum) {
     empty.textContent = 'Proszę wybrać województwo i miasto'
     empty.style.display = 'block'
     return
@@ -175,10 +153,10 @@ async function szukaj() {
 
   const { data, error } = await supabase.from('tabela_elektrykow')
     .select('imie,nazwisko,email,telefon,gwiazdki')
-    .eq('wojewodztwo', wojId)
-    .eq('miasto', miastoId)
+    .eq('wojewodztwo', wojIdNum)
+    .eq('miasto', miastoIdNum)
 
-  console.log('Wyniki z bazy:', data)
+  console.log('Wyniki z bazy:', data)  // LOG
 
   if (error) {
     empty.textContent = 'Błąd pobierania danych: ' + error.message
